
2001-12-03  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added conditional test to see if $base_url is
          defined before setting it in the method. Bug fix; added URL,
          Timeout and Proxy to list of functions called by constructor.
          Minor bugfix to URL extraction from query results.
          
2001-11-28 Alasdair Allan <aa@astro.ex.ac.uk>

        * Result.pm: listofobjects() method added
        
2001-11-27 Alasdair Allan <aa@astro.ex.ac.uk>

        * Inital release, minimal functionality

2001-11-12 Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version