@@ -2,7 +2,7 @@ use ExtUtils::MakeMaker;
 
 WriteMakefile( 
                'NAME'           => 'Astro::SIMBAD',
-	       'VERSION'        => '1.9.1',
+	       'VERSION'        => '1.9.2',
                'PREREQ_PM'      => { LWP => 5.53 },
 	       'dist'           => { COMPRESS => "gzip -9f"},
 	       ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
